@@ -8,6 +8,8 @@ Version 2.4
 * Add more generalized support for the zoo of Mark5 module directory
 * When reading data from Mark5 units, verify that the data is in the same format class as requested by the .input file.
 * Improve Mark5B decoding
+* Fix Bonn Bug 1: on 64-bit systems sizeof(unsigned long) is 8 bytes, not 4 as it is on 32-bit systems.
+  - some other variable types changed as well to minimize casting and prevent future similar problems.
 
 Version 2.3
 ~~~~~~~~~~~
